--- a/SocialDistance/src/main/res/layout/activity_daily_summary.xml
+++ b/SocialDistance/src/main/res/layout/activity_daily_summary.xml
@@ -34,8 +34,11 @@
         android:id="@+id/daily_summary_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
+        android:layout_marginHorizontal="4dp"
         android:layout_marginVertical="@dimen/main_margin_vertical"
+        android:paddingHorizontal="8dp"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
