UI Refine - Refine tab layout

--- a/SocialDistance/src/main/res/layout/activity_introduction.xml
+++ b/SocialDistance/src/main/res/layout/activity_introduction.xml
@@ -24,11 +24,10 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             style="@style/tabIndicator"
-            app:tabBackground="@drawable/tab_selector"
-            app:tabIndicatorHeight="0dp"
-            app:tabPaddingStart="8.5dp"
-            app:tabPaddingEnd="8.5dp"
-            app:tabGravity="center"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom" />
+
     </androidx.viewpager.widget.ViewPager>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
