--- a/SocialDistance/src/main/res/layout/fragment_hcert_main.xml
+++ b/SocialDistance/src/main/res/layout/fragment_hcert_main.xml
@@ -47,17 +47,13 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/hcert_tab_layout"
         style="@style/tabIndicator"
-        android:layout_marginLeft="@dimen/main_margin_horizontal"
-        android:layout_marginRight="@dimen/main_margin_horizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/main_margin_vertical"
         android:layout_marginBottom="@dimen/main_margin_vertical"
-        app:tabBackground="@drawable/tab_selector"
-        app:tabIndicatorHeight="0dp"
-        app:tabGravity="center"
-        app:tabPaddingStart="8.5dp"
-        app:tabPaddingEnd="8.5dp"
         app:layout_constraintBottom_toTopOf="@id/hcert_bottom_barrier"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/hcert_bottom_barrier"
