--- a/SocialDistance/src/main/res/menu/main.xml
+++ b/SocialDistance/src/main/res/menu/main.xml
@@ -3,11 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_about"
-        android:title="@string/menu_about"
-        app:showAsAction="never" />
-
-    <item
         android:id="@+id/action_daily_summary"
         android:title="@string/menu_daily_summary"
         app:showAsAction="never" />
@@ -23,23 +18,8 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_privacy"
-        android:title="@string/menu_privacy"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_control"
-        android:title="@string/menu_control"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_faq"
-        android:title="@string/menu_faq"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_hints"
-        android:title="@string/menu_hints"
+        android:id="@+id/action_settings"
+        android:title="@string/menu_settings"
         app:showAsAction="never" />
 
 </menu>
