--- a/SocialDistance/src/main/res/layout/activity_main.xml
+++ b/SocialDistance/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:autoSizeMaxTextSize="@dimen/text_size_title"
         android:autoSizeMinTextSize="@dimen/text_size_min"
         android:autoSizeTextType="uniform"
-        android:maxLines="3"
+        android:maxLines="2"
         android:padding="@dimen/text_padding"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toTopOf="@id/main_risk_detail_text_invisible"
@@ -115,7 +115,11 @@
         style="@style/Button.Round"
         android:layout_marginHorizontal="@dimen/main_margin_horizontal"
         android:layout_marginVertical="@dimen/main_margin_vertical"
+        android:autoSizeMinTextSize="1sp"
+        android:autoSizeTextType="uniform"
+        android:maxLines="2"
         android:text="@string/hcert_full_name"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toTopOf="@id/main_guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -144,20 +148,23 @@
         style="@style/Button.Major"
         android:layout_width="wrap_content"
         android:layout_marginHorizontal="@dimen/main_margin_horizontal"
+        android:layout_marginVertical="@dimen/main_margin_vertical"
+        android:autoSizeMinTextSize="1sp"
+        android:autoSizeTextType="uniform"
+        android:maxLines="1"
         android:text="@string/main_button_start"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/main_info_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/main_white_background_view"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/main_info_text"
         style="@style/Text.Center"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/main_margin_horizontal"
-        android:layout_marginTop="18dp"
         android:layout_marginBottom="6dp"
         android:autoSizeMaxTextSize="@dimen/text_size_small"
         android:autoSizeMinTextSize="@dimen/text_size_min"
@@ -165,9 +172,9 @@
         android:gravity="center_horizontal|top"
         android:lines="3"
         android:textSize="@dimen/text_size_small"
+        app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@id/main_version_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_start_button"
         tools:text="iqwjeoifjqejroioaeirjoiegjoaajojqpwoeijfpqowieqwjepofijqwpoweqjpfoqjwpeoifjqpwoeifjpqoweijfp\nqjwpoefqjpwoeifqwoeijfpqjwpeofijegiajo\niowefjjowEifjaoajwoeifjaow" />
