--- a/SocialDistance/src/main/res/layout/activity_splash.xml
+++ b/SocialDistance/src/main/res/layout/activity_splash.xml
@@ -45,6 +45,7 @@
         android:id="@+id/splash_cdc_name_ch"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
         android:autoSizeMaxTextSize="16sp"
         android:autoSizeMinTextSize="1sp"
         android:autoSizeTextType="uniform"
@@ -62,12 +63,13 @@
         android:id="@+id/splash_cdc_name_translate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
         android:layout_marginBottom="25dp"
         android:autoSizeMaxTextSize="10sp"
         android:autoSizeMinTextSize="1sp"
         android:autoSizeTextType="uniform"
         android:gravity="center"
-        android:lines="1"
+        android:maxLines="2"
         android:text="@string/cdc_name_translate"
         android:textColor="@color/white"
         android:textSize="10sp"
