--- a/SocialDistance/src/main/res/layout/app_widget.xml
+++ b/SocialDistance/src/main/res/layout/app_widget.xml
@@ -19,7 +19,7 @@
         android:gravity="center_horizontal"
         android:lines="1"
         android:padding="2dp"
-        android:text="@string/barcode_shortcut_label"
+        android:text="@string/hcert_full_name"
         android:textColor="@color/white" />
 
     <ImageView
